# SMedia

./: .gitignore  CMakeLists.txt  README.md  SImgView.cpp  SVidPlay.cpp  s_img.cpp  s_img.hpp  s_vid.cpp  s_vid.hpp  test.cpp
